<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_bar_daily_task"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/daily_task"
        app:showAsAction="always"/>
    <item
        android:id="@+id/bottom_bar_task_calender"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/task_calender"
        app:showAsAction="always"/>



    <item
        android:id="@+id/bottom_bar_search"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/bottom_bar_user"
        android:icon="@drawable/ic_arrow_left"
        android:title="@string/user"
        app:showAsAction="always"/>

</menu>