<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteGray">

    <FrameLayout
        android:id="@+id/nav_host_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/_60sdp"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center">

            <ImageView
                android:id="@+id/bottom_bar_daily_task"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/daily_task"
                android:focusable="true"
                android:padding="@dimen/_11sdp"
                android:src="@drawable/ic_content_paste_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:tint="@color/greyish"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/bottom_bar_task_calender"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/task_calender"
                android:layout_marginStart="@dimen/_15sdp"
                android:focusable="true"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_today_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:tint="@color/greyish"
                app:layout_constraintStart_toEndOf="@id/bottom_bar_daily_task" />

            <ImageView
                android:id="@+id/bottom_bar_search"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:focusable="true"
                android:padding="@dimen/_10sdp"
                android:tint="@color/greyish"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/ic_public_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bottom_bar_user" />

            <ImageView
                android:id="@+id/bottom_bar_user"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/user"
                android:focusable="true"
                android:padding="@dimen/_10sdp"

                android:src="@drawable/ic_account_circle_black_24dp"
                android:tint="@color/greyish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:tint="@color/white"
        app:layout_anchor="@id/bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>