<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_header_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                >

                <TextView
                    android:id="@+id/tv_today_task_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/_18"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_today_task_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/sunday"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@id/tv_today_task_month_year"
                    app:layout_constraintStart_toEndOf="@id/tv_today_task_date"
                    app:layout_constraintTop_toTopOf="@id/tv_today_task_date" />


                <TextView
                    android:id="@+id/tv_today_task_month_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/april_2020"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_7sdp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_today_task_date"
                    app:layout_constraintStart_toEndOf="@id/tv_today_task_date"
                    app:layout_constraintTop_toBottomOf="@id/tv_today_task_day" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile_iv_profileImage"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/profile3"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_2sdp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/black"
                    app:civ_shadow_radius="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
            android:id="@+id/main_single_row_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:deselection="false"
            app:longPress="false"
            app:multiSelection="false"
            app:layout_constraintTop_toBottomOf="@id/card_header_view"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_header_view"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_today_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           />
            <View
                app:layout_constraintTop_toBottomOf="@id/rc_today_task_list"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
